--- a/test/trigger_dqmoffline_sourceclient-file.cfg
+++ b/test/trigger_dqmoffline_sourceclient-file.cfg
@@ -36,32 +36,23 @@ include "Configuration/GlobalRuns/data/ReconstructionGR.cff"
 
 include "L1Trigger/Configuration/data/L1Config.cff"
 include "L1Trigger/HardwareValidation/data/L1HardwareValidation.cff"
+include "DQMServices/Components/data/DQMEnvironment.cfi"
 
-include "DQMOffline/Trigger/data/L1TMonitor_dqmoffline.cff"    
-include "DQM/L1TMonitorClient/data/L1TMonitorClient.cff"    
+include "DQMOffline/Trigger/data/L1TMonitor_dqmoffline.cff"
+
+
+   
+path psource = {l1tmonitor, dqmEnv, dqmSaver}
 
     #########################################################
     #### BEGIN DQM Online Environment #######################
     #########################################################
-
-    #### PUT THE FOLLOWING INTO YOUR PATH FOR OPERATION AT P5
-    #### REPLACE SubsystemName by the name of your source ###
-
-       replace dqmSaver.convention      = "Online"
+       replace dqmSaver.convention      = "Offline"
+       replace dqmSaver.workflow        = "/RECO/DQM/TRIGGER"
        replace dqmSaver.dirName       = "."
        replace dqmSaver.producer      = "DQM"
        # (this goes into the foldername)
        replace dqmEnv.subSystemFolder = "L1T"
-       
-//     replace dqmSaver.saveByLumiSection =  1
-//     replace dqmSaver.saveByMinute      = -1
-//     replace dqmSaver.saveByEvent       = -1
        replace dqmSaver.saveByRun         =  1
-       replace dqmSaver.saveAtJobEnd      = true       # optionally change fileSaving  conditions
-       
-       
-   
-    #########################################################
-    #### END ################################################
-    #########################################################
+       replace dqmSaver.saveAtJobEnd      = false     
 } 
