introduce four vector analyzer (HLT and offline 4-vectors)

--- a/test/trigger_dqmoffline_sourceclient-file.cfg
+++ b/test/trigger_dqmoffline_sourceclient-file.cfg
@@ -2,7 +2,8 @@ process DQM={
     
 untracked PSet maxEvents = {untracked int32 input = -1}
     source = PoolSource{
-        untracked vstring fileNames={"file:cruzet1_test2.root"}
+//        untracked vstring fileNames={"file:cruzet1_test2.root"}
+        untracked vstring fileNames={"file:relval_test.root"}
     }
 
  #######################################################################
@@ -38,21 +39,24 @@ include "L1Trigger/Configuration/data/L1Config.cff"
 include "L1Trigger/HardwareValidation/data/L1HardwareValidation.cff"
 include "DQMServices/Components/data/DQMEnvironment.cfi"
 
+//include "DQM/HLTEvF/data/FourVectorHLT.cfi"
+include "DQMOffline/Trigger/data/FourVectorHLTOffline.cfi"
 include "DQMOffline/Trigger/data/L1TMonitor_dqmoffline.cff"
 
 
    
-path psource = {l1tmonitor, dqmEnv, dqmSaver}
+path psource = {l1tmonitor, hltResults}
+
+   # I've found this to be most useful even for running from file...
+       replace dqmSaver.convention = "Online"
+
+       replace dqmSaver.saveByRun         =  1
+       # replace dqmSaver.forceRunNumber         =  666
+       replace dqmSaver.saveAtJobEnd      = true
 
     #########################################################
-    #### BEGIN DQM Online Environment #######################
+    #### END ################################################
     #########################################################
-       replace dqmSaver.convention      = "Offline"
-       replace dqmSaver.workflow        = "/RECO/DQM/TRIGGER"
-       replace dqmSaver.dirName       = "."
-       replace dqmSaver.producer      = "DQM"
-       # (this goes into the foldername)
-       replace dqmEnv.subSystemFolder = "L1T"
-       replace dqmSaver.saveByRun         =  1
-       replace dqmSaver.saveAtJobEnd      = false     
+     endpath p ={ dqmSaver }
+
 } 
