--- a/test/trigger_dqmoffline_sourceclient-file.cfg
+++ b/test/trigger_dqmoffline_sourceclient-file.cfg
@@ -2,8 +2,8 @@ process DQM={
     
 untracked PSet maxEvents = {untracked int32 input = -1}
     source = PoolSource{
-//        untracked vstring fileNames={"file:cruzet1_test2.root"}
-        untracked vstring fileNames={"file:relval_test.root"}
+        untracked vstring fileNames={"file:cruzet2_reco_test.root"}
+//        untracked vstring fileNames={"file:relval_test.root"}
     }
 
  #######################################################################
