--- a/test/trigger_dqmoffline_sourceclient-file.cfg
+++ b/test/trigger_dqmoffline_sourceclient-file.cfg
@@ -2,7 +2,7 @@ process DQM={
     
 untracked PSet maxEvents = {untracked int32 input = -1}
     source = PoolSource{
-        untracked vstring fileNames={"file:cruzet2_reco_test.root"}
+        untracked vstring fileNames={"dcache:/store/relval/2008/6/6/RelVal-RelValZEE-1212543891-STARTUP-2nd-02/0000/1C0E0673-E533-DD11-AFF0-000423D99AAA.root"}
 //        untracked vstring fileNames={"file:relval_test.root"}
     }
 
