added L1 objects to four vector monitoring in 2_1_x

--- a/test/trigger_dqmoffline_sourceclient-file.cfg
+++ b/test/trigger_dqmoffline_sourceclient-file.cfg
@@ -2,8 +2,8 @@ process DQM={
     
 untracked PSet maxEvents = {untracked int32 input = -1}
     source = PoolSource{
-        untracked vstring fileNames={"dcache:/store/relval/2008/6/6/RelVal-RelValZEE-1212543891-STARTUP-2nd-02/0000/1C0E0673-E533-DD11-AFF0-000423D99AAA.root"}
-//        untracked vstring fileNames={"file:relval_test.root"}
+//untracked vstring fileNames={'/store/relval/2008/6/6/RelVal-RelValZEE-1212543891-STARTUP-2nd-02/0000/1C0E0673-E533-DD11-AFF0-000423D99AAA.root'}
+untracked vstring fileNames={'/store/relval/2008/6/6/RelVal-RelValZMM-1212543891-STARTUP-2nd-02/0000/4A3DAF35-E533-DD11-9D80-001617E30F56.root'}
     }
 
  #######################################################################
@@ -46,7 +46,8 @@ include "DQMOffline/Trigger/data/L1TMonitor_dqmoffline.cff"
 
    
 path psource = {l1tmonitor, hltResults}
-
+//module dumpcont = EventContentAnalyzer{}      
+//path dump = {dumpcont}
    # I've found this to be most useful even for running from file...
        replace dqmSaver.convention = "Online"
 
